--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
 <body style="background-color: rgb(20,20,20);">
     <div class="container">
-        <div class="game-box">
+        <section class="title">TIC-TAC-TOE</section>
+        <section class="text-header"></section>
+        <div class="game-box" id="game-box-id">
             <div class="box" id="box-1"></div>
             <div class="box" id="box-2"></div>
             <div class="box" id="box-3"></div>
@@ -24,6 +26,10 @@
             <div class="box" id="box-8"></div>
             <div class="box" id="box-9"></div>
         </div>
+        <section class="buttons">
+            <button class="button" id="single-player">Single Player</button>
+            <button class="button" id="multi-player">MultiPlayer</button>
+        </section>
     </div>
     <script src="./tic-tac-toe.js"></script>
 </body>
