--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body style="background-color: rgb(20,20,20);">
     <div class="container">
         <section class="title">TIC-TAC-TOE</section>
-        <section class="text-header"></section>
+        <section class="text-header">Hi</section>
         <div class="game-box" id="game-box-id">
             <div class="box" id="box-1"></div>
             <div class="box" id="box-2"></div>
@@ -27,9 +27,10 @@
             <div class="box" id="box-9"></div>
         </div>
         <section class="buttons">
-            <button class="button" id="single-player">Single Player</button>
-            <button class="button" id="multi-player">MultiPlayer</button>
+            <button class="button hover" id="single-player">Single Player</button>
+            <button class="button hover" id="multi-player">MultiPlayer</button>
         </section>
+        <section class="score-board"></section>
     </div>
     <script src="./tic-tac-toe.js"></script>
 </body>
