done. 100% (but without AI)

--- a/index.html
+++ b/index.html
@@ -30,7 +30,17 @@
             <button class="button hover" id="single-player">Single Player</button>
             <button class="button hover" id="multi-player">MultiPlayer</button>
         </section>
-        <section class="score-board"></section>
+        <section class="score-board">
+            <div>
+                <span id="player1-name"></span>
+                <span id="player1-score"></span> 
+            </div>
+            <div>
+                <span id="player2-name"></span>
+                <span id="player2-score"></span> 
+            </div>
+            <div class='score-label'>Ties: <span id="tie-score"></span></div>
+        </section>
     </div>
     <script src="./tic-tac-toe.js"></script>
 </body>
